--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "dependencies": {
     "cypress": "^9.4.1",
     "yarn": "^1.22.17"
+  },
+  "devDependencies": {
+    "cypress-each": "^1.11.0"
   }
 }
